# environment_correction

./: README.md  corrigir_ambiente_monitoramento.py  pyproject.toml
environment_correction/: __init__.py  __main__.py  alignment.py  cli.py  columns.py  config.py  correction.py  io.py  logging_utils.py  metrics.py  pipeline.py  preprocessing.py  quality.py  thi.py
