[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "environment-correction"
version = "2.0.0"
description = "Correct monitoring environmental variables using heat_stress_report as source of truth."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pandas>=1.5"]
authors = [{name = "João Gerd Zell de Mattos"}]

[project.scripts]
environment-correction = "environment_correction.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["environment_correction*"]
